public/stylesheets/challenge.css
.challenge {
  float: left;
  display: inline-block;
  width: 30%;
  height: 400px;
  margin: 2em 0 2em 2em;
  padding: 1em 2em  ;
  background-color: #DBDBDB;
}

.challenge-title {
  font-weight: bolder;
  letter-spacing: 1px;
  font-size: 2em;
  margin-top: 0.3em;
}

.challenge-instructions {
  white-space: pre-wrap;
}

.challenge-answer {
  display: inline-block;
  margin-left: 10px;
  padding: 10px;
  background-color: #EEEEEE;
}

.console {
  float: right;
  display: inline-block;
  width: 60%;
  height: 400px;
  padding: 1em;
  background-color: #202020;
  margin: 2em 2em 2em 0;
  color: #FFF;
  white-space: pre-wrap;
  overflow: auto;
}

.console p {
  margin-top: 10px;
}

.console-input-field {
  width: 600px;
  height: 30px;
  margin-left: 0.3em;
  background-color: inherit;
  border-style: none;
}

.console-input-field:focus {
  outline: none;
}

.console-response {
  color: #666;
  margin: 10px 0 0 0;
}
.success {
  color: green;
  margin: 10px 0 20px 25px;
}

.fail {
  color: #96281B;
  margin: 10px 0 20px 25px; 
}

